--- a/widgets/example/common/index.html
+++ b/widgets/example/common/index.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>spark-button</title>
+    <title>火花-按钮</title>
 
     <link rel="stylesheet" href="../common/index.css">
     <link rel="import" href="packages/polymer/polymer.html">
