--- a/widgets/example/index.html
+++ b/widgets/example/index.html
@@ -2,13 +2,13 @@
 
 <html>
   <head>
-    <title>Spark Widget Examples</title>
+    <title>火花小部件实例</title>
     <link rel="import" href="packages/polymer/polymer.html">
     <link rel="import" href="examples.html">
   </head>
 
   <body>
-    <div>Spark Widget Examples:</div>
+    <div>火花小部件实例:</div>
     <widget-examples></widget-examples>
   </body>
 
