--- a/widgets/example/spark_dialog/example_ui.html
+++ b/widgets/example/spark_dialog/example_ui.html
@@ -20,11 +20,11 @@
     </spark-button>
 
     <spark-dialog id="dialog" title="Some Dialog" opened>
-      <label for="renameFileName">New name</label>
+      <label for="renameFileName">新名称</label>
       <input id="renameFileName" type="text" class="form-control">
 
-      <spark-dialog-button cancel>Cancel</spark-dialog-button>
-      <spark-dialog-button submit>Rename</spark-dialog-button>
+      <spark-dialog-button cancel>取消</spark-dialog-button>
+      <spark-dialog-button submit>重命名</spark-dialog-button>
     </spark-dialog>
   </template>
 
